fix align

--- a/source/_patterns/02-molecules/card/_card.scss
+++ b/source/_patterns/02-molecules/card/_card.scss
@@ -8,7 +8,7 @@
   position: relative;
   display: flex;
   flex-flow: row wrap;
-  align-content: start;
+  align-items: start;
   margin-bottom: $standard-spacing;
   padding-bottom: $standard-spacing;
   transition: $fast-transition-speed $standard-ease;
